Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19195

Active Record unit test fails with MariaDB 10.4.3

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.3, 10.4(EOL)
    • 10.4.4
    • Optimizer
    • None
    • Fedora release 29 (Twenty Nine)

    Description

      Running Ruby on Rails Active Record unit tests with MariaDB 10.4.3, some of the tests failed.
      I have created a rep.sql script to reproduce this failure without using Ruby on Rails.

      • Steps to reproduce
      1. Download 'rep.sql' from this ticket
      2. Execute this rep.sql script as follows, create test database if not exist

      $ mysql -uroot -D test < rep.sql 
       
      * Expected result
       
      *************************** 1. row ***************************
               id: 25772709
             name: sapphire
             type: NULL
      looter_type: Pirate
        looter_id: 812997556
          ship_id: NULL
        parrot_id: 136705135
      treasure_id: 25772709
      $
      

      • Actual result
        No record returns

      Attachments

        Activity

          People

            igor Igor Babaev (Inactive)
            yahonda Yasuo Honda
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.