MDEV-19195 Active Record unit test fails with MariaDB 10.4.3

Currently usage of range rowid filters can be combined only with
ref access and single index range access. So if the optimizer has
chosen some other quick select method to access a joined table
then no range rowid filter can be used for this table.